# pystac

./: .actrc  .bumpversion.cfg  .codespellignore  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .release-please-manifest.json  .style.yapf  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  RELEASING.md  Untitled.ipynb  asv.conf.json  conftest.py  doc8.ini  mkdocs.yml  mypy.ini  pyproject.toml  release-please-config.json  reqirements-dev.txt  requirements-bench.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  (+5 more)
.github/: dependabot.yml  (+1 more)
core/: pyproject.toml
core/pystac/: __init__.py  asset.py  band.py  catalog.py  collection.py  common_metadata.py  errors.py  item.py  item_assets.py  item_collection.py  layout.py  link.py  media_type.py  provider.py  rel_type.py  stac_io.py  summaries.py  version.py
core/pystac/extensions/: ext.py  hooks.py  version.py  view.py
core/pystac/html/: JSON.jinja2
core/pystac/serialization/: identify.py
core/pystac/static/: fields-normalized.json
core/pystac/validation/: __init__.py  local_validator.py  stac_validator.py
core/src/pystac/: __init__.py  stac_object.py
core/src/pystac/extensions/: ext.py  hooks.py
docs/: .gitignore  Makefile  api.rst  concepts.rst  conf.py  contributing.md  contributing.rst  index.md  index.rst  installation.rst  make.bat  migration-guide.md  pyproject.toml  pystac-v2.0.md  quickstart.ipynb  requirements-docs.in  requirements-docs.txt  requirements.txt  tutorials.rst  usage.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: asset.md  asset.rst  band.rst  cache.rst  catalog.md  catalog.rst  collection.md  collection.rst  common_metadata.rst  constants.md  container.md  errors.rst  extensions.rst  general.md  io.md  item.md  item.rst  item_assets.rst  item_collection.rst  layout.rst  link.md  link.rst  media_type.rst  provider.rst  pystac.rst  rel_type.rst  render.md  serialization.rst  stac-object.md  stac_io.rst  stac_object.md  stac_object.rst  summaries.rst  utils.rst  validate.md  validation.rst  version.rst
docs/api/extensions/: archive.rst  base.rst  cf.rst  classification.rst  datacube.rst  earthquake.rst  eo.rst  ext.rst  file.rst  grid.rst  hooks.rst  index.md  insar.rst  item_assets.rst  label.rst  mgrs.rst  mlm.rst  order.rst  pointcloud.rst  processing.rst  product.rst  projection.md  projection.rst  raster.rst  render.rst  sar.rst  sat.rst  scientific.rst  sentinel1.rst  sentinel2.rst  sentinel3.rst  ssys.rst  storage.rst  table.rst  timestamps.rst  version.rst  view.rst  xarray_assets.rst
docs/api/serialization/: common_properties.rst  identify.rst  migrate.rst
docs/api/validation/: local_validator.rst  schema_uri_map.rst  stac_validator.rst
docs/example-catalog/: catalog.json
docs/example-catalog/landsat-8-l1/: catalog.json  collection.json
docs/example-catalog/landsat-8-l1/2018-05/: LC80150322018141LGN00.json
docs/example-catalog/landsat-8-l1/2018-06/: LC80140332018166LGN00.json  LC80300332018166LGN00.json
docs/example-catalog/landsat-8-l1/2018-07/: LC80150332018189LGN00.json
docs/example-catalog/landsat-8-l1/2018-10/: LC810701820181001LGN00.json
docs/getting-started/: installation.md  quickstart.md
docs/overrides/: main.html
docs/overrides/stylesheets/: extra.css
docs/tutorials/: adding-new-and-custom-extensions.ipynb  creating-a-landsat-stac.ipynb  how-to-create-stac-catalogs.ipynb  how-to-read-data-from-stac.ipynb  pystac-introduction.ipynb  pystac-spacenet-tutorial.ipynb
docs/tutorials/example-catalog/: catalog.json
docs/tutorials/example-catalog/eo/: catalog.json
docs/tutorials/example-catalog/eo/landsat-8-l1/: catalog.json  item.json
docs/tutorials/example-catalog/eo/sentinel-2-l1c/: catalog.json
docs/user-guide/: catalogs.md  collections.md  concepts.md  io.md  items.md
extensions/classification/: README.md  pyproject.toml
extensions/classification/pystac/extensions/: classification.py
extensions/classification/tests/: test_classification.py
extensions/classification/tests/cassettes/test_classification/: test_apply_bitfields.yaml  test_validate_classification.yaml
extensions/classification/tests/data-files/: classification_landsat_example.json  collection-item-assets-raster-bands.json
extensions/eo/: README.md  pyproject.toml
extensions/eo/pystac/extensions/: eo.py
extensions/eo/tests/: test_eo.py
extensions/eo/tests/cassettes/test_eo/: test_bands.yaml  test_cloud_cover.yaml  test_set_field[cloud_cover-7.8].yaml  test_set_field[snow_cover-99].yaml
extensions/eo/tests/data-files/: eo-asset-example.json  eo-collection.json  eo-landsat-example.json  sample-bands-in-item-properties.json
extensions/eo/tests/data-files/eo/: eo-collection.json  sample-bands-in-item-properties.json
extensions/eo/tests/data-files/item/: sample-item.json  sample-with-raster.json
extensions/label/: README.md  pyproject.toml
extensions/label/pystac/extensions/: label.py
extensions/mlm/: README.md  pyproject.toml
extensions/mlm/pystac/extensions/: mlm.py
extensions/mlm/tests/: test_mlm.py
extensions/mlm/tests/cassettes/test_mlm/: test_apply.yaml  test_migrate[https---raw.githubusercontent.com-stac-extensions-mlm-refs-tags-v{version}-examples-item_basic.json-1.0.0].yaml  test_migrate[https---raw.githubusercontent.com-stac-extensions-mlm-refs-tags-v{version}-examples-item_basic.json-1.1.0].yaml  (+10 more)
extensions/mlm/tests/data-files/mlm/: item_basic.json
extensions/pointcloud/: README.md  pyproject.toml
extensions/pointcloud/pystac/extensions/: pointcloud.py
extensions/pointcloud/tests/: test_pointcloud.py
extensions/pointcloud/tests/data-files/: example-laz.json
extensions/sat/: README.md  pyproject.toml
extensions/sat/pystac/extensions/: sat.py
extensions/sat/tests/: test_sat.py
meta/: pyproject.toml
pytest-pystac/: README.md  pyproject.toml
pytest-pystac/pytest_pystac/: plugin.py
(+1798 files in other folders)
