[project]
name = "pystac"
description = "Python library for working with the SpatioTemporal Asset Catalog (STAC) specification"
readme = "README.md"
authors = [
    { name = "Rob Emanuele", email = "rdemanuele@gmail.com" },
    { name = "Jon Duckworth", email = "duckontheweb@gmail.com" },
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" },
]
maintainers = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
keywords = ["pystac", "imagery", "raster", "catalog", "STAC"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = ["python-dateutil>=2.7.0"]
dynamic = ["version"]

[project.optional-dependencies]
validation = ["jsonschema>=4.18"]

[dependency-groups]
dev = [
    "html5lib>=1.1",
    "jinja2>=3.1.4",
    "jsonschema>=4.23.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-recording>=0.13.2",
    "requests-mock>=1.12.1",
]
docs = []

[project.urls]
Documentation = "https://pystac.readthedocs.io"
Repository = "https://github.com/stac-utils/pystac"
Issues = "https://github.com/stac-utils/pystac/issues"
Changelog = "https://github.com/stac-utils/pystac/blob/main/CHANGELOG.md"
Discussions = "https://github.com/radiantearth/stac-spec/discussions/categories/stac-software"

[tool.mypy]
show_error_codes = true
strict = true

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
filterwarnings = ["error"]
addopts = "--block-network --record-mode=none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pystac/version.py"
