[project]
name = "pystac"
description = "Python library for working with the SpatioTemporal Asset Catalog (STAC) specification"
readme = "README.md"
authors = [
    { name = "Rob Emanuele", email = "rdemanuele@gmail.com" },
    { name = "Jon Duckworth", email = "duckontheweb@gmail.com" },
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" },
]
maintainers = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
keywords = ["pystac", "imagery", "raster", "catalog", "STAC"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.9.0.post0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "jsonschema>=4.25.1",
    "mkdocstrings-python>=2.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
docs = [
    "mkdocs-material>=9.7.0",
]

[project.urls]
Documentation = "https://pystac.readthedocs.io"
Repository = "https://github.com/stac-utils/pystac"
Issues = "https://github.com/stac-utils/pystac/issues"
Changelog = "https://github.com/stac-utils/pystac/blob/main/CHANGELOG.md"
Discussions = "https://github.com/radiantearth/stac-spec/discussions/categories/stac-software"

[tool.mypy]
show_error_codes = true
strict = true

[tool.basedpyright]
exclude = ["tests/v1"]
reportExplicitAny = false
reportAny = false
reportImplicitStringConcatenation = false
reportImportCycles = false

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
filterwarnings = ["error"]
testpaths = ["tests"]
norecursedirs = ["tests/v1"]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pystac/version.py"
