[project]
name = "pystac"
description = "Python library for working with the SpatioTemporal Asset Catalog (STAC) specification"
readme = "README.md"
authors = [
    { name = "Rob Emanuele", email = "rdemanuele@gmail.com" },
    { name = "Jon Duckworth", email = "duckontheweb@gmail.com" },
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" },
]
maintainers = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
keywords = ["pystac", "imagery", "raster", "catalog", "STAC"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
]
dynamic = ["version"]

[project.optional-dependencies]
obstore = [
    "obspec>=0.1.0",
    "obstore>=0.8.2",
]
validation = [
    "jsonschema>=4.25.1",
    "referencing>=0.37.0",
]
jinja2 = [
    "jinja2>=3.1.6",
]

[dependency-groups]
bench = [
    "asv>=0.6.5",
]
dev = [
    "basedpyright>=1.36.1",
    "html5lib>=1.1",
    "jsonschema>=4.25.1",
    "prek>=0.2.27",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "requests-mock>=1.12.1",
    "ruff>=0.14.9",
]
docs = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=2.0.1",
]

[project.urls]
Documentation = "https://pystac.readthedocs.io"
Repository = "https://github.com/stac-utils/pystac"
Issues = "https://github.com/stac-utils/pystac/issues"
Changelog = "https://github.com/stac-utils/pystac/blob/main/CHANGELOG.md"
Discussions = "https://github.com/radiantearth/stac-spec/discussions/categories/stac-software"

[tool.basedpyright]
reportExplicitAny = false
reportAny = false
reportImportCycles = false
reportImplicitStringConcatenation = false

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
extend-exclude = ["tests/v1", "src/pystac/validation"]

[tool.pytest.ini_options]
addopts = "--block-network --record-mode=none"

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pystac/version.py"
