[project]
name = "pystac-core"
version = "1.14.3"
requires-python = ">=3.10"
dependencies = [
    "python-dateutil>=2.7.0",
]

[project.optional-dependencies]
jinja2 = ["jinja2<4.0"]
orjson = ["orjson>=3.5"]
urllib3 = ["urllib3>=2.6.3"]
validation = ["jsonschema~=4.18"]

[tool.hatch.build.targets.wheel]
packages = ["src/pystac"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
