[project]
name = "pystac-docs"
version = "0.0.0"
description = "This package is only for uv, so it can share a lockfile with the top-level project. It should never be published"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.39",
    "ipython>=8.28.0",
    "jinja2>=3.1.4",
    "jupyter>=1.1.1",
    "nbsphinx>=0.9.5",
    "pydata-sphinx-theme>=0.15.4",
    "rasterio>=1.4.1",
    "shapely>=2.0.6",
    "sphinx>=8.1.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-fulltoc>=1.2.0",
]
