[project]
name = "pytest-pystac"
description = "Pytest plugin with common fixtures for PySTAC tests"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pystac-core", "pytest", "python-dateutil"]
license = { text = "Apache-2.0" }

[project.entry-points.pytest11]
pystac = "pytest_pystac.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["pytest_pystac/data-files/**"]
