[project]
name = "pystac-ext-sat"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = ["pystac-core"]

[tool.uv.sources]
pystac-core = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pystac.extensions" = ["py.typed"]
